[package]
name = "lucian"
version = "0.2.11"
edition = "2021"
description = "a library use by *theshy*(a socks5 proxy server)"
license = "GPL-3.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = {version = "0.8.4",features = ["os-poll", "net"]}
backtrace = "0.3"
sni_shuffle = "0.1"
enum-iterator = "1.1.2"
configparser = "3.0.0"

